room-history: Make sure there is enough space for overlays on small media

--- a/data/resources/stylesheet/_room_history.scss
+++ b/data/resources/stylesheet/_room_history.scss
@@ -270,14 +270,18 @@ state-group-row.room-history-row {
     background-color: var(--border-color);
   }
 
-  .instructions {
+  > .overlaid {
+    margin: 6px;
+  }
+
+  > .instructions {
     padding: 12px;
     border-radius: vendor.$menu_radius;
   }
 
   // Copied from .osd button style in https://gitlab.gnome.org/GNOME/libadwaita/-/blob/main/src/stylesheet/widgets/_buttons.scss
   &.has-placeholder {
-    .instructions {
+    > .instructions {
       color: vendor.$osd_fg_color;
       background-color: rgb(0 0 0 / 65%);
 
@@ -287,26 +291,36 @@ state-group-row.room-history-row {
     }
 
     &:hover {
-      .instructions {
+      > .instructions {
         color: white;
         background-color: color-mix(in srgb, black calc(0.85 * 65%), currentColor calc(0.15 * 65%));
       }
     }
 
     &:active {
-      .instructions {
+      > .instructions {
         color: white;
         background-color: color-mix(in srgb, black calc(0.75 * 65%), currentColor calc(0.25 * 65%));
       }
     }
   }
 
-  .spinner {
+  > .spinner {
     min-width: 32px;
     min-height: 32px;
   }
 
-  image.osd.circular {
+  > button {
+    // Leave enough space at the start to click to be able to view small images.
+    &:dir(ltr) {
+      margin-left: 64px;
+    }
+    &:dir(rtl) {
+      margin-right: 64px;
+    }
+  }
+
+  > image.osd.circular {
     min-width: 64px;
     min-height: 64px;
     border-radius: 32px;
@@ -319,12 +333,12 @@ state-group-row.room-history-row {
   }
 
   &.compact {
-    .spinner {
+    > .spinner {
       min-width: 16px;
       min-height: 16px;
     }
 
-    image.osd.circular {
+    > image.osd.circular {
       min-width: 32px;
       min-height: 32px;
       -gtk-icon-size: 16px;
